<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/loginbg"
    tools:context="com.example.manop.mashop.Startup.RegisterActivity">

    <EditText
        android:id="@+id/name"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:padding="10dp" />

    <EditText
        android:id="@+id/email"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password"
        android:drawableLeft="@drawable/ic_security_green_24dp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/prod_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_margin="10dp"
        android:background="@drawable/email_login_button_bg"
        android:hint="@string/register"
        android:padding="2dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />
</RelativeLayout>
