<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.example.manop.mashop.Startup.LoginActivity">

    <EditText
        android:id="@+id/loginemailfield"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/loginpasswordfield"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginemailfield"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginpasswordfield"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/input_outline2"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:text="" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="2dp">



        <!--<ImageView-->
            <!--android:id="@+id/google_sign_in"-->
            <!--android:layout_width="160dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:text="Text"-->
            <!--android:background="@drawable/google_signin"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_margin="10dp"-->
            <!--android:textSize="18sp" />-->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:text="Text"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:textSize="18sp" />

    </LinearLayout>

    <!--<com.facebook.login.widget.LoginButton-->
    <!--android:id="@+id/facebook_login"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/loginbtn"-->
    <!--android:layout_alignStart="@+id/loginbtn"-->
    <!--android:layout_below="@+id/linear"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="11dp"-->
    <!--android:paddingBottom="10dp"-->
    <!--android:paddingTop="10dp" />-->
    <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton-->
    <!--android:id="@+id/t_login_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/linear"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:gravity="center" />-->

    <Button
        android:id="@+id/newaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear"
        android:background="@android:color/transparent"
        android:text="@string/need_new_account"
        android:textColor="#001eff" />
</RelativeLayout>
